# agent-lens

.claude/skills/ui-ux-pro-max/: SKILL.md
.claude/skills/ui-ux-pro-max/scripts/design-system/agentlens/: MASTER.md
.github/workflows/: agentlens-desktop-build.yml
agentlens/: .gitignore  Cargo.toml  README.md  run.bat  run.sh
agentlens-docs/: DECISION-LOG.md  PERSONAS.md  PRD-0001-agent-observability.md  PROJECT-CHARTER.md  README.md  RISK-REGISTER.md  TEST-STRATEGY.md  TRD-0001-agent-observability.md  feature-catalog.md  module-list.md
agentlens/desktop/src-tauri/: Cargo.toml  tauri.conf.json
agentlens/desktop/src-tauri/capabilities/: default.json
agentlens/desktop/src-tauri/icons/: icon.icns
agentlens/desktop/src-tauri/src/: main.rs
agentlens/examples/: claude-settings.json
agentlens/scripts/: install-hooks.sh
agentlens/src/: api.rs  hooks.rs  jsonl.rs  lib.rs  llm.rs  main.rs  otel.rs  pricing.rs  store.rs  tailer.rs  ui.rs  util.rs
agentlens/ui/: index.html
