[package]
name = "agentlens"
version = "0.1.0"
edition = "2021"
description = "Local observability for Claude Code sessions: capture hooks + transcript JSONL, store in SQLite, review by repo with token in/out/cached stats."

[[bin]]
name = "agentlens"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"

[profile.release]
opt-level = 2

[workspace]
members = ["desktop/src-tauri"]
