[package]
name = "agentlens-desktop"
version = "0.1.0"
edition = "2021"
description = "AgentLens desktop app (Tauri) — review Claude Code sessions by repo with token stats."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
agentlens = { path = "../.." }
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
