[package]
name = "agentlens-desktop"
version = "0.1.0"
edition = "2021"
description = "AgentLens desktop app (Tauri) — review Claude Code sessions by repo with token stats."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
agentlens = { path = "../.." }
tokio = { version = "1", features = ["rt-multi-thread"] }
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
